# ont-analysis-toolkit

./: .gitignore  LICENSE  README.md  environment.yml  run_data_example.csv  setup.cfg  setup.py
oat/: __init__.py  command.py
oat/envs/: lofreq.yaml  medaka.yaml
oat/protocols/: length_params.csv
oat/protocols/ARTIC-V4.1/rampart/: primers.json  protocol.json
oat/protocols/ARTIC-V4.1/schemes/: artic-v4.1.scheme.bed
oat/protocols/CMV-STANDARD/rampart/: README.md  genome.json  protocol.json
oat/protocols/CMV-STANDARD/schemes/: coverage_targets.bed  coverage_targets1.bed  primers.scheme.bed
oat/protocols/CMV-TYRA/rampart/: README.md  primers.json  protocol.json
oat/protocols/CMV-TYRA/schemes/: primers.scheme.bed  primers.scheme.original
oat/protocols/EDEN/schemes/: coverage_targets.bed  nCoV-2019.scheme.bed
oat/protocols/HIV-H2SEQ/rampart/: K03455.1.gb  K03455.1_modified.gb  genome.json  primers.json  protocol.json
oat/protocols/HIV-H2SEQ/schemes/: coverage_targets.bed  (+1 more)
oat/references/: K03455.1.gff3  MN908947.3.gff3  NC_004102.1.fasta  NC_004102.1.gff3  NC_006273.2.fasta.bwt  NC_006273.2.fasta.fai  NC_006273.2.fasta.pac  NC_006273.2.fasta.sa
oat/scripts/: alternate_analysis.smk  analysis_module.smk  demux_and_filter.py  gb2gff.py  genbank2json.py  get_latest_tag.sh  gff2gff.py  gff2json.py  helper_functions.py  rampart_module.py
src/: ._command.py  __init__.py
src/oat/: __init__.py  command.py
src/oat/cli/: .___init__.py  ._cli.py  ._command copy.py  __init__.py  cli.py  cli_old.py
src/oat/gui/: ._gui.py  __init__.py  gui.py
(+40 files in other folders)
