[metadata]
name = oat
version = attr: oat.__version__
author = Dr Charles Foster
author_email = charles.foster@unsw.edu.au
url = https://github.com/charlesfoster/ont-analysis-toolkit
description = ont-analysis-toolkit from SAVID: processing of ONT data for consensus genome generation
long_description = file: README.md
long_description_content_type = text/markdown
keywords = oat, ONT, virology
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
# packages = find:
package_dir =
    = src
zip_safe = False
include_package_data = True
install_requires =
    PyQt5 == 5.15.9
    colorlog == 6.6.0
    biopython == 1.79
    pandas == 1.4.1
    psutil == 5.9.0
    pygraphviz == 1.9
    pygments == 2.11.2
    GPUtil == 1.4.0
    watchdog == 3.0.0
    pip == 23.0.1
    pod5 == 0.3.10

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    oat = oat.command:main

[options.extras_require]
dev =
    black==22.1.0
    flake8==4.0.1

[options.package_data]
* = *
